--- a/index.html
+++ b/index.html
@@ -1,43 +1,20 @@
 <!DOCTYPE html>
-<html ng-app="store">
+<html ng-app="socialApp">
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	</head>
-	<body ng-controller="StoreController as store">
-		<div ng-repeat="product in store.products">
-			<h1>{{product.name}}</h1>
-			<h2>{{product.price | currency}}</h2>
-			<p>{{product.description}}</p>
-			<button ng-show="product.canPurchase">Add to cart</button>
-		</div>
-		
-		<section ng-controller="PanelController as panel">
-			<ul class="nav nav-pills">
-				<li ng-class="{ active:panel.isSelected(1)}"> 
-					<a href="" ng-click="panel.selectTab(1)">Description</a>
-				</li>
-				<li ng-class="{ active:panel.isSelected(2)}"> 
-					<a href="" ng-click="panel.selectTab(2)">Specs</a>
-				</li>
-				<li ng-class="{ active:panel.isSelected(3)}"> 
-					<a href="" ng-click="panel.selectTab(3)">Reviews</a>
-				</li>
-			</ul>
-			<div class="panel" ng-show="tab === 1">
-				<h4>Description</h4>
-				<p>{{product.desctiption}}</p>
-			</div>
-			<div class="panel" ng-show="tab === 2">
-				<h4>Specs</h4>
-				<blockquote>None</blockquote>
-			</div>
-			<div class="panel" ng-show="tab === 3">
-				<h4>Reviews</h4>
-				<blockquote>None</blockquote>
-			</div>
-		</section>
+	<body>
 
-		<script type="text/javascript" src="js/angular.min.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
+		<div id="fb-root"></div>
+
+		<div ng-app="socialPath">
+		    <facebook app-id="195269414175736"></facebook>
+
+		    <facebook-like layout="button_count"></facebook-like>
+    		<facebook-like layout="recommend"></facebook-like>
+		</div>
+
+		<script type="text/javascript" src="app/angular.min.js"></script>
+		<script type="text/javascript" src="app/app.js"></script>
 	</body>
 </html>
